--- a/index.css
+++ b/index.css
@@ -1,6 +1,169 @@
-th,
-td {
-  border: 1px solid black;
-  border-collapse: collapse;
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%; /* Passage de la police de 16px par défaut, à 10px -----> 10/16*100= 62.5 */
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  line-height: 1.5;
   margin: 0;
+  padding: 0;
+  background-color: #e6e2f1;
+}
+
+main {
+  max-width: 780px;
+  margin: auto;
+  padding: 1.5em;
+}
+
+h1 {
+  font-family: "Dancing Script";
+  font-weight: 700;
+  text-align: center;
+  font-size: 7em;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+}
+
+form > #habit {
+  font-size: 2em;
+  text-align: center;
+  margin: 1em 2em;
+  padding: 0.5em;
+  border-radius: 0.5em;
+}
+
+form > #addHabitButton {
+  margin: auto;
+  width: 50%;
+  font-size: 3em;
+  font-weight: 900;
+  padding: 0.5em;
+  border-radius: 0.8em;
+  background-color: #5c4d8c;
+  color: #fff;
+}
+
+form > #addHabitButton:hover {
+  cursor: pointer;
+  background-color: #403562;
+}
+
+table {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.5em 0.5em 3em 0.5em;
+  flex-direction: column;
+  font-size: 2em;
+  background-color: #fff;
+  -webkit-box-shadow: 7px 4px 69px -13px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 7px 4px 69px -13px rgba(0, 0, 0, 0.75);
+  box-shadow: 7px 4px 69px -13px rgba(0, 0, 0, 0.75);
+  border-radius: 0.5em;
+  margin-top: 2em;
+}
+
+thead {
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+  padding-top: 2em;
+}
+
+thead > tr > th:first-child {
+  display: none;
+}
+
+thead > tr {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+tbody > tr {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+}
+
+tbody > tr > th {
+  width: 100%;
+  border: 5px solid black;
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+  border-radius: 1rem;
+}
+
+tr > td {
+  border: 1px solid black;
+  font-size: 2em;
+  width: calc(100% / 7.7);
+  border-radius: 0.5rem;
+  height: 0.8em;
+  margin: 0.05em;
+}
+
+.delete-btn {
+  border: none;
+  cursor: pointer;
+}
+
+/*||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+MEDIA-QUERIES - to tablet & desktop
+||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
+
+@media screen and (min-width: 780px) {
+  table {
+    display: flex;
+  }
+  tbody > tr > th {
+    width: 50%;
+    margin: 0.1em;
+  }
+  tbody > tr {
+    display: flex;
+    align-items: center;
+  }
+  thead > tr {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 0.3em;
+  }
+  thead > tr > th:first-child {
+    display: block;
+    width: 50%;
+    border: 1px solid #ffffff00;
+  }
+  thead > tr > th {
+    border-bottom: 2px solid black;
+    width: calc(50% / 7.8);
+    margin: 0.1em;
+    border-radius: 0.5em;
+  }
+  tr > td {
+    position: relative;
+    border: 1px solid black;
+    font-size: 2em;
+    width: calc(50% / 8);
+    border-radius: 0.5rem;
+    margin: 0.05em;
+  }
+  .delete-btn {
+    position: relative;
+    border: none;
+    translate: 10em -1.6em;
+  }
 }
